--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@supabase/supabase-js": "^2.39.0",
     "@vercel/analytics": "^1.6.1",
     "@vercel/blob": "^0.14.0",
+    "@vercel/speed-insights": "^1.3.1",
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
