--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.0.6",
+    "firebase": "^10.14.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.303.0",
     "next": "^14.0.4",
