--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "crons": [
     {
-      "path": "/api/notifications/process",
-      "schedule": "*/1 * * * *"
+      "path": "/api/notifications/process-fcm",
+      "schedule": "0 */6 * * *"
     }
   ]
 }
