--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.0.6",
     "firebase": "^10.14.1",
+    "groq-sdk": "^0.37.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.303.0",
     "next": "14.2.35",
