--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "path": "/api/notifications/process-fcm",
       "schedule": "0 0 * * *"
+    },
+    {
+      "path": "/api/ai-assistant/check-inactivity",
+      "schedule": "0 */2 * * *"
     }
   ]
 }
