fix: Change inactivity check cron to once daily for Hobby plan

--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
     },
     {
       "path": "/api/ai-assistant/check-inactivity",
-      "schedule": "0 */2 * * *"
+      "schedule": "0 1 * * *"
     }
   ]
 }
